Fixed the same bug on mobile

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -188,7 +188,9 @@ iframe { width: 280pt; }
 
 /******************************************************************************/
 /* FORUM FORMS */
-			
+	
+	.forum .bbp-replies td.bbp-reply-content div.content { width: 220pt; }
+		
 	.forum .bbp-topic-form input#bbp_topic_title,
 	.forum .bbp-topic-form textarea,
 	.forum .bbp-reply-form textarea,
